crates/panache-parser/tests/snapshots/yaml__yaml_suite_X8DW.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: X8DW
input: "---\n? key\n# comment\n: value\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
