crates/panache-parser/tests/snapshots/yaml__yaml_suite_XLQ9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: XLQ9
input: "---\nscalar\n%YAML 1.2\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
