crates/panache-parser/tests/snapshots/yaml__yaml_suite_XV9V.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: XV9V
input: "Folding:\n  \"Empty line\n\n  as a line feed\"\nChomping: |\n  Clipped empty lines\n \n\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
