crates/panache-parser/tests/snapshots/yaml__yaml_suite_Z9M4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: Z9M4
input: "%TAG !e! tag:example.com,2000:app/\n---\n- !e!foo \"bar\"\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
