crates/panache-parser/tests/snapshots/yaml__yaml_suite_ZF4X.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: ZF4X
input: "Mark McGwire: {hr: 65, avg: 0.278}\nSammy Sosa: {\n    hr: 63,\n    avg: 0.288\n  }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
