crates/panache-parser/tests/snapshots/yaml__yaml_suite_ZH7C.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: ZH7C
input: "&a a: b\nc: &d d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
