crates/panache-parser/tests/snapshots/yaml__yaml_suite_ZK9H.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: ZK9H
input: "{ key: [[[\n  value\n ]]]\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
