crates/panache-parser/tests/snapshots/yaml__yaml_suite_ZL4Z.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: ZL4Z
input: "---\na: 'b': c\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_ERROR:invalid plain scalar containing mapping indicator sequence@6..13]
