crates/panache-parser/tests/snapshots/yaml__yaml_suite_ZVH3.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: ZVH3
input: "- key: value\n - item1\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:invalid token while parsing block map key@14..21]
